Fixed white space on todos. Fixed white margin by icon search. Added loading skeletons

--- a/src/TodoItem/TodoItem.css
+++ b/src/TodoItem/TodoItem.css
@@ -9,7 +9,7 @@
 .TodoItemContainer {
     display: flex;
     justify-content: center;
-    margin-left: -1.9em;
+    /* margin-left: -1.9em; */
 }
 
 .TodoItem {
