--- a/src/TodoList/TodoList.css
+++ b/src/TodoList/TodoList.css
@@ -1,3 +1,5 @@
 .TodoListContainer {
     margin-top: 2.4em;
+    padding-left: 0;
+    margin-left: 0;
 }
